add the docker and live server extensions to the dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,9 @@
 		"vscode": {
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
-				"chrisbibby.hide-git-ignored"
+				"chrisbibby.hide-git-ignored",
+				"ms-azuretools.vscode-docker",
+				"ritwickdey.LiveServer"
 			]
 		}
 	}
