add the git history extension to the dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
 			"extensions": [
 				"chrisbibby.hide-git-ignored",
 				"ms-azuretools.vscode-docker",
-				"ritwickdey.LiveServer"
+				"ritwickdey.LiveServer",
+				"donjayamanne.githistory"
 			]
 		}
 	}
