--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,12 @@
   },
   "homepage": "https://github.com/NovaSoftworks/nova_game-client#readme",
   "devDependencies": {
-    "parcel": "^2.9.3"
+    "@types/jest": "^29.5.3",
+    "canvas": "^2.11.2",
+    "jest": "^29.5.3",
+    "jest-environment-jsdom": "^29.6.2",
+    "parcel": "^2.9.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
   }
 }
